Added background image to header and adjusted possition of header text and switched to color scheme

--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="jquery-1.7.2.js"></script>
         <script src="hashtable.js"></script>
         <link rel="stylesheet" type="text/css" href="./index2.css" />
+				<link rel="stylesheet" type="text/css" href="./palette.scss" />
 </head>
 <script type="text/javascript">
 var maxX = 0;
@@ -297,25 +298,26 @@ var Explode = function(event){
 
 </script>
 <body>
-        <div id="header"><h2>dlgreen.com</h2><p>The home of dlgreen on the internet</p></div>
+        <div id="header"><div id="headerContent"><h2>dlgreen.com</h2><p>The home of dlgreen on the internet</p></div></div>
 	<div id="container">
                 <div id="background"></div>
-                <div id="node1" class="Node SmallCircle"><div class="NodeMetadata">node2,node3,node4,node30</div>Professional</div>
-		<div id="node2" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><a href="https://www.resumonk.com/PkKGWexVVIu80EVeHIPGNQ">Resume</a></div>
-		<div id="node3" class="Node XSmallCircle"><div class="NodeMetadata">node1</div>Senior Architect</div>
-		<div id="node4" class="Node XSmallCircle"><div class="NodeMetadata">node1</div>04</div>
+                <div id="node1" class="Node SmallCircle"><div class="NodeMetadata">node2,node3,node4,node5,node30</div><p>Professional</p></div>
+		<div id="node2" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p><a href="https://www.resumonk.com/PkKGWexVVIu80EVeHIPGNQ">Resume</a></p></div>
+		<div id="node3" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Senior Architect</p></div>
+		<div id="node4" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Developer</p></div>
+		<div id="node5" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Engineer</p></div>
 
-                <div id="node11" class="Node SmallCircle"><div class="NodeMetadata">node12,node13,node14,node30</div>Family</div>
-		<div id="node12" class="Node XSmallCircle"><div class="NodeMetadata">node11</div>12</div>
-		<div id="node13" class="Node XSmallCircle"><div class="NodeMetadata">node11</div>13</div>
-		<div id="node14" class="Node XSmallCircle"><div class="NodeMetadata">node11</div>14</div>
+                <div id="node11" class="Node SmallCircle"><div class="NodeMetadata">node12,node13,node30</div><p>Family</p></div>
+		<div id="node12" class="Node XSmallCircle"><div class="NodeMetadata">node11</div><p>Wife</p></div>
+		<div id="node13" class="Node XSmallCircle"><div class="NodeMetadata">node11</div><p>Children</p></div>
+		<!--<div id="node14" class="Node XSmallCircle"><div class="NodeMetadata">node11</div>14</div>-->
 
-                <div id="node21" class="Node SmallCircle"><div class="NodeMetadata">node22,node23,node24,node30</div>Personal</div>
-		<div id="node22" class="Node XSmallCircle"><div class="NodeMetadata">node21</div>Boardgames</div>
-		<div id="node23" class="Node XSmallCircle"><div class="NodeMetadata">node21</div>Sailing</div>
-		<div id="node24" class="Node XSmallCircle"><div class="NodeMetadata">node21</div>Building</div>
+                <div id="node21" class="Node SmallCircle"><div class="NodeMetadata">node22,node23,node24,node30</div><p>Personal</p></div>
+		<div id="node22" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p>Gaming</p></div>
+		<div id="node23" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p>Sailing</p></div>
+		<div id="node24" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p>Building</p></div>
 
-                <div id="node30" class="Node MediumCircle"><div class="NodeMetadata">node21,node11,node1</div>David Greenwald</div>
+                <div id="node30" class="Node MediumCircle"><div class="NodeMetadata">node21,node11,node1</div><p>David Greenwald</p></div>
 
 
 		<!--<div id="node1" class="Node XSmallCircle"><div class="NodeMetadata">node2,node5,node11,node41</div>01</div>
