Labels and Images
Added Labels for XSmall Nodes, and images for all nodes

--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Cicular Div</title>
+	<title>Dlgreen.com</title>
         <script type="text/javascript" src="jquery-1.7.2.js"></script>
         <script src="hashtable.js"></script>
         <link rel="stylesheet" type="text/css" href="./index2.css" />
@@ -306,28 +306,28 @@ var Explode = function(event){
 		<div id="background"></div>
 			<div id="node30" class="Node MediumCircle"><div class="NodeMetadata">node21,node11,node1</div><p><img src="0.jpg" alt="David Greenwald"/></p></div>
 
-			 	<div id="node1" class="Node SmallCircle"><div class="NodeMetadata">node2,node3,node4,node5,node6,node30</div><p>Professional</p></div>
-					<div id="node2" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p><a href="https://www.resumonk.com/PkKGWexVVIu80EVeHIPGNQ"><img src="resume.jpg" alt="Resume"/></a></p></div>
-					<div id="node3" class="Node XSmallCircle"><div class="NodeMetadata">node31,node32,node1</div><p>Senior Architect</p></div>
-						<div id="node31" class="Node XSmallCircle"><div class="NodeMetadata">node3</div><p>Content Delivery</p></div>
-						<div id="node32" class="Node XSmallCircle"><div class="NodeMetadata">node3</div><p><img src="sciencedirect.jpg" alt="ScienceDirect"/></p></div>
-						<div id="node33" class="Node XSmallCircle"><div class="NodeMetadata">node3</div><p><img src="Mendeley.png" alt="Mendeley"/></p></div>
-					<div id="node4" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Developer</p></div>
-					<div id="node5" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Software Engineer</p></div>
-					<div id="node6" class="Node XSmallCircle"><div class="NodeMetadata">node1</div><p>Computer Scientist</p></div>
+			 	<div id="node1" class="Node SmallCircle"><div class="NodeMetadata">node2,node3,node4,node5,node6,node30</div><p><img src="softwareengineer.jpg" alt="Professional"/></p></div>
+					<div id="node2" class="group Node"><div class="NodeMetadata">node1</div><div class="XSmallCircle"><p><a href="https://www.resumonk.com/PkKGWexVVIu80EVeHIPGNQ"><img src="resume.jpg" alt="Resume"/></a></p></div><span class="caption">Resume</span></div>
+					<div id="node3" class="group Node"><div class="NodeMetadata">node31,node32,node1</div><div class="XSmallCircle"><p><img src="architect.png" alt="Architect"/></p></div><span class="caption">Architecture</span></div>
+						<div id="node31" class="group Node"><div class="NodeMetadata">node3</div><div class="XSmallCircle"><p><img src="contentDelivery.jpg" alt="Content Delivery"/></p></div><span class="caption">Content Delivery</span></div>
+						<div id="node32" class="group Node"><div class="NodeMetadata">node3</div><div class="XSmallCircle"><p><img src="sciencedirect.jpg" alt="ScienceDirect"/></p></div><span class="caption">ScienceDirect</span></div>
+						<div id="node33" class="group Node"><div class="NodeMetadata">node3</div><div class="XSmallCircle"><p><img src="Mendeley.png" alt="Mendeley"/></p></div><span class="caption">Mendeley</span></div>
+					<div id="node4" class="group Node"><div class="NodeMetadata">node1</div><div class="XSmallCircle"><p><img src="microservices.png" alt="Java"/></p></div><span class="caption">Microservices</span></div>
+					<div id="node5" class="group Node"><div class="NodeMetadata">node1</div><div class="XSmallCircle"><p><img src="java.jpg" alt="Java"/></p></div><span class="caption">Java</span></div>
+					<div id="node6" class="group Node"><div class="NodeMetadata">node1</div><div  class="XSmallCircle"><p><img src="aws.png" alt="AWS"/></p></div><span class="caption">AWS</span></div>
 
-				<div id="node11" class="Node SmallCircle"><div class="NodeMetadata">node12,node13,node14,node30</div><p>Family</p></div>
-					<div id="node12" class="Node XSmallCircle"><div class="NodeMetadata">node11</div><p>Wife</p></div>
-					<div id="node13" class="Node XSmallCircle"><div class="NodeMetadata">node11</div><p>Children</p></div>
-					<div id="node14" class="Node XSmallCircle"><div class="NodeMetadata">node11</div><p>Cats</p></div>
+				<div id="node11" class="Node SmallCircle"><div class="NodeMetadata">node12,node13,node14,node30</div><p><img src="family.JPG" alt="Wife"/></p></div>
+					<div id="node12" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="wife.jpg" alt="Wife"/></p></div><span class="caption">Wife</span></div>
+					<div id="node13" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="kid1.jpg" alt="Kid"/></p></div><span class="caption">Child</span></div>
+					<div id="node14" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="kid2.jpg" alt="Kid"/></p></div><span class="caption">Child</span></div>
 
-				<div id="node21" class="Node SmallCircle"><div class="NodeMetadata">node22,node23,node24,node25,node30</div><p>Personal</p></div>
-					<div id="node22" class="Node XSmallCircle"><div class="NodeMetadata">node221,node222,node21</div><p>Gaming</p></div>
-						<div id="node221" class="Node XSmallCircle"><div class="NodeMetadata">node22</div><p>Board</p></div>
-						<div id="node222" class="Node XSmallCircle"><div class="NodeMetadata">node22</div><p>PC</p></div>
-					<div id="node23" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p><img src="sailing.jpg" alt="Sailing"/></p></div>
-					<div id="node24" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p>Beach</p></div>
-					<div id="node25" class="Node XSmallCircle"><div class="NodeMetadata">node21</div><p>SCUBA</p></div>
+				<div id="node21" class="Node SmallCircle"><div class="NodeMetadata">node22,node23,node24,node25,node30</div><p><img src="personal.jpg" alt="Personal"/></p></div>
+					<div id="node22" class="group Node"><div class="NodeMetadata">node221,node222,node21</div><div class="XSmallCircle"><p><img src="friends.jpg" alt="Friends"/></p></div><span class="caption">Friends</span></div>
+						<div id="node221" class="group Node"><div class="NodeMetadata">node22</div><div class="XSmallCircle"><p><img src="boardgame.jpg" alt="Board Game"/></p></div><span class="caption">Board Games</span></div>
+						<div id="node222" class="group Node"><div class="NodeMetadata">node22</div><div class="XSmallCircle"><p><img src="gaming.jpg" alt="gaming"/></p></div><span class="caption">Gaming</span></div>
+					<div id="node23" class="group Node"><div class="NodeMetadata">node21</div><div class="XSmallCircle"><p><img src="sailing.jpg" alt="Sailing"/></p></div><span class="caption">Sailing</span></div>
+					<div id="node24" class="group Node"><div class="NodeMetadata">node21</div><div class="XSmallCircle"><p><img src="beach.jpg" alt="Beach"/></p></div><span class="caption">Beach</span></div>
+					<div id="node25" class="group Node"><div class="NodeMetadata">node21</div><div class="XSmallCircle"><p><img src="scuba.jpg" alt="Scuba"/></p></div><span class="caption">SCUBA</span></div>
 
 
 
