fix capitolization in file

--- a/index2.html
+++ b/index2.html
@@ -335,7 +335,7 @@ var endDrag = function(event){
 
 				<div id="node11" class="Node SmallCircle"><div class="NodeMetadata">node12,node13,node14,node30</div><p><img src="family.JPG" alt="Wife"/></p></div>
 					<div id="node12" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="wife.jpg" alt="Wife"/></p></div><span class="caption">Wife</span></div>
-					<div id="node13" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="kid1.jpg" alt="Kid"/></p></div><span class="caption">Child</span></div>
+					<div id="node13" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="kid1.JPG" alt="Kid"/></p></div><span class="caption">Child</span></div>
 					<div id="node14" class="group Node"><div class="NodeMetadata">node11</div><div class="XSmallCircle"><p><img src="kid2.jpg" alt="Kid"/></p></div><span class="caption">Child</span></div>
 
 				<div id="node21" class="Node SmallCircle"><div class="NodeMetadata">node22,node23,node24,node25,node30</div><p><img src="personal.jpg" alt="Personal"/></p></div>
